--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     ]
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.3",
     "@zeit/next-css": "^1.0.1",
     "axios": "^1.3.4",
     "next": "^13.2.4",
